Implemented e-mail changing in front and back end.
